@@ -35,6 +35,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class Debug4jClassFileTransformer implements ClassFileTransformer {
@@ -188,11 +189,9 @@ public class Debug4jClassFileTransformer implements ClassFileTransformer {
             }
             pool.makeClass(new ByteArrayInputStream(byteCode));
             cc = pool.get(transformerClassName);
-            List<String> fieldList = new java.util.ArrayList<>(Arrays.stream(cc.getDeclaredFields()).map(e -> e.getName() + e.getSignature()).toList());
-            fieldList.sort(Comparator.naturalOrder());
-            List<String> methodList = new java.util.ArrayList<>(Arrays.stream(cc.getDeclaredMethods()).map(e -> e.getName() + e.getSignature() +
-                    MD5.create().digestHex(Base64Encoder.encode(e.getMethodInfo().getCodeAttribute().getCode()))).toList());
-            methodList.sort(Comparator.naturalOrder());
+            List<String> fieldList = Arrays.stream(cc.getDeclaredFields()).map(e -> e.getName() + e.getSignature()).sorted(Comparator.naturalOrder()).collect(Collectors.toList());
+            List<String> methodList = Arrays.stream(cc.getDeclaredMethods()).map(e -> e.getName() + e.getSignature() +
+                    MD5.create().digestHex(Base64Encoder.encode(e.getMethodInfo().getCodeAttribute().getCode()))).sorted(Comparator.naturalOrder()).collect(Collectors.toList());
             return cc.getName() + "@" + cc.getGenericSignature() + "@" + JSON.toJSONString(fieldList) + "@" + JSON.toJSONString(methodList);
         } catch (Exception e) {
             e.printStackTrace();
